adicionei variáveis de ambiente

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     "files.exclude": {
         ".vscode": true,
         "node_modules": true,
-        "public": true,
+        "public": false,
         ".gitignore": true,
         "package-lock.json": true,
-        "package.json": true
+        "package.json": false
     }
 }
